kubernetes-manifests-example/example-deploment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-openshift
    env: workshop
  name: hello-openshift
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello-openshift
      deployment: hello-openshift
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-openshift
        env: workshop
        deployment: hello-openshift
    spec:
      containers:
      - image: ${EXTERNAL_REGISTRY}/${HELLO_OCP_IMAGE}
        imagePullPolicy: IfNotPresent
        name: hello-openshift
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8888
          protocol: TCP  
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
...
