kubernetes-manifests-example/example-pod-buda.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: example-pod-buda
  labels:
    app: workshop-pod-buda
    env: workshop 
spec:
  containers:
    - name: container-buda
      image: quay.io/silvinux/alpine-net:latest
      imagePullPolicy: IfNotPresent
      workingDir: /app/shared
      command: [ "python3", "-m", "http.server", "8080" ]
      ports:
        - name: ssh-port
          containerPort: 22
        - name: web-port
          containerPort: 8080  
      resources:
        limits:
          cpu: "250m"
          memory: 200Mi
        requests:
          cpu: "250m"
          memory: 200Mi
      volumeMounts:
        - name: workshop-shared
          mountPath: /app/shared
  volumes:
  - name: workshop-shared
    persistentVolumeClaim:
      claimName: pvclaim-example-pod-shared         
  restartPolicy: Always
...
