kubernetes-manifests-example/example-pod-http-static.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: example-pod-http-static
  labels:
    app: workshop-pod-example-http
    env: workshop 
spec:
  containers:
    - name: container-http
      image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:74ad3a0296b9313825c85e07d046b8122603cc309df0472e36e3036c4c18e3f2
      imagePullPolicy: IfNotPresent
      workingDir: /app/workshop
      command: [ "python3", "-m", "http.server", "8080" ]
      ports:
        - name: http
          containerPort: 8080
      resources:
        limits:
          cpu: "500m"
          memory: 512Mi
        requests:
          cpu: "500m"
          memory: 512Mi
      volumeMounts:
        - name: workshop-content
          mountPath: /app/workshop
  volumes:
    - name: workshop-content
      configMap:
        name: workshop-content
  restartPolicy: Always
...
