kubernetes-manifests-example/example-pod-secret.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: example-pod-secret
  labels:
    app: workshop-pod-secret-example
    env: workshop 
spec:
  containers:
    - name: container-one
      image: $EXTERNAL_REGISTRY/$POSTGRES_IMAGE
      ports:
        - name: postgres-port 
          containerPort: 5432
  restartPolicy: Always
...
