kubernetes-manifests-example/example-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  labels:
    app: workshop-pod-example
    env: workshop 
spec:
  containers:
    - name: container-one
      image: $EXTERNAL_REGISTRY/$POSTGRES_IMAGE
      ports:
        - name: ssh-port 
          containerPort: 22
    - name: container-two
      image: $EXTERNAL_REGISTRY/$GOGS_IMAGE
      ports:
        - name: http-port 
          containerPort: 3000
  restartPolicy: Always
...
