kubernetes-manifests-example/example-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workshop-example-svc
    env: workshop
  name: hello-openshift-svc
spec:
  ports:
  - name: http-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-openshift
  sessionAffinity: None
  type: ClusterIP
...
