kubernetes-manifests-example/example-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: workshop-example-route
    env: workshop
  name: hello-openshift-route
spec:
  port:
    targetPort: http-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hello-openshift-svc
    weight: 100
  wildcardPolicy: None
...
